# master_project

./: README.md
Icanfly/Icanfly/: CMakeLists.txt  package.xml
Icanfly/Icanfly/include/: autopilot_helper.h
Icanfly/Icanfly/include/autopilot_helper/: autopilot_helper.h
Icanfly/Icanfly/include/mini_snap_trajectory_generator/: trajectory_generator.h
Icanfly/Icanfly/include/mpc_controller/: DroneMPCController.h
Icanfly/Icanfly/include/pid_controller/: DronePIDController.h
Icanfly/Icanfly/launch/: Icanfly_lqr.launch  Icanfly_mpc.launch  Icanfly_pid.launch  Icanfly_rl copy.launch  Icanfly_rl.launch  base_quad_simulation.launch
Icanfly/Icanfly/parameters/: default.yaml
Icanfly/Icanfly/resources/urdf/: hummingbird_base.xacro
Icanfly/Icanfly/resources/worlds/: house.world
Icanfly/Icanfly/src/: DroneMPCController.cpp  DroneMPCControllerNode.cpp  DronePIDController.cpp  DronePIDControllerNode.cpp  autopilot_helper.cpp  fly_10_turn_experience.cpp  trajectory_generator.cpp
Icanfly/autopilot/include/autopilot/: autopilot_inl.h
Icanfly/controller/: lqr_controller.tar.xz
Icanfly/controller/autopilot/: CMakeLists.txt  package.xml
Icanfly/controller/autopilot/src/: autopilot_node.cpp
Icanfly/controller/lqr_controller/: CMakeLists.txt  package.xml
Icanfly/controller/lqr_controller/launch/: mocap_lqr.launch
Icanfly/controller/lqr_controller/params/: mocap_lqr_params.yaml
Icanfly/controller/lqr_controller/src/: autopilot_lqr_instance.cpp  lqr_controller.cpp
Icanfly/controller/mpc_controller/rpg_mpc/: CMakeLists.txt  package.xml
Icanfly/controller/pid_controller/position_controller/: CMakeLists.txt  package.xml
Icanfly/controller/pid_controller/position_controller/include/position_controller/: position_controller.h
Icanfly/controller/pid_controller/position_controller/src/: autopilot_pid_instance.cpp  position_controller.cpp
Icanfly/controller/rl_controller/: CMakeLists.txt  package.xml  requirements.txt
Icanfly/controller/rl_controller/diff-mpc/mpc.pytorch/mpc.pytorch-master/examples/: gym_pendulum.py
Icanfly/controller/rl_controller/rl_controller/scripts/: rl_trainer.py
Icanfly/controller/rl_controller/scripts/: autopilot_rl_instance.py  environment.py  network.py  ppo_quadrotor.pth  rl_trainer.py  stable_baseline3_env.py  stable_baseline3_policy.py  stable_baseline3_train.py  stable_baseline3_train_SAC.py
Icanfly/drone_rl/: CMakeLists.txt  package.xml  setup.py
Icanfly/drone_rl/launch/: drone_rl.launch
Icanfly/drone_rl/src/drone_rl/: __init__.py  env.py  run_trained_model.py  train_ppo.py
Icanfly/drone_rl/src/drone_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_1/: events.out.tfevents.1739546394.hello-Legion-Y9000X-IAH7.16640.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_10/: events.out.tfevents.1739547832.hello-Legion-Y9000X-IAH7.47703.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_11/: events.out.tfevents.1739547878.hello-Legion-Y9000X-IAH7.48953.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_12/: events.out.tfevents.1739549762.hello-Legion-Y9000X-IAH7.62523.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_13/: events.out.tfevents.1739549841.hello-Legion-Y9000X-IAH7.63362.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_14/: events.out.tfevents.1739549941.hello-Legion-Y9000X-IAH7.66289.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_15/: events.out.tfevents.1739549956.hello-Legion-Y9000X-IAH7.66562.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_2/: events.out.tfevents.1739546437.hello-Legion-Y9000X-IAH7.19792.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_3/: events.out.tfevents.1739546633.hello-Legion-Y9000X-IAH7.23869.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_4/: events.out.tfevents.1739546700.hello-Legion-Y9000X-IAH7.24385.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_5/: events.out.tfevents.1739547496.hello-Legion-Y9000X-IAH7.32416.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_6/: events.out.tfevents.1739547518.hello-Legion-Y9000X-IAH7.33154.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_7/: events.out.tfevents.1739547678.hello-Legion-Y9000X-IAH7.38101.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_8/: events.out.tfevents.1739547723.hello-Legion-Y9000X-IAH7.41702.0
Icanfly/drone_rl/src/drone_rl/ppo_logs/PPO_9/: events.out.tfevents.1739547755.hello-Legion-Y9000X-IAH7.42721.0
Icanfly/gui/rqt_quad_gui/resource/: autopilot_widget.ui
Icanfly/plot/: plot_pid_result.py
Icanfly/plot/result_plot/: CMakeLists.txt  package.xml
Icanfly/plot/result_plot/scripts/: plot_result.py
Icanfly/quad_launch_files/launch/: base_computer_example.launch  real_quad_example.launch
Icanfly/simulator_interface/rpg_rotors_interface/launch/: quadrotor_rgb_world_no_controller.launch
Icanfly/simulator_interface/rpg_rotors_interface/parameters/: autopilot.yaml  position_controller.yaml
Icanfly/simulator_interface/rpg_rotors_interface/src/: rpg_rotors_interface.cpp
Icanfly/trajectory_planning/mini_snap_trajectory_generator/src/: trajectory_generator.cpp  trajectory_generator_node.cpp
Icanfly/trajectory_planning/minimum_jerk_trajectories/src/: Demo.cpp
Icanfly/trajectory_planning/trajectory_generation_helper/src/: heading_trajectory_helper.cpp  polynomial_trajectory_helper.cpp
rotors_simulator/rotors_control/src/nodes/: roll_pitch_yawrate_thrust_controller_node.cpp
rotors_simulator/rotors_description/urdf/: component_snippets.xacro  hummingbird.xacro  multirotor_base copy.xacro  multirotor_base.xacro
rotors_simulator/rotors_gazebo/: CMakeLists.txt  package.xml
rotors_simulator/rotors_gazebo/launch/: fixed_wing_hil.launch  mav_hovering_example.launch  mav_hovering_example_with_vi_sensor.launch  mav_with_joy.launch  spawn_mav_RL.launch
rotors_simulator/rotors_gazebo/src/: DroneXYZController.cpp  DroneXYZControllerNode.cpp  pid_follow.cpp  run_circle_locus.cpp
rotors_simulator/rotors_gazebo/worlds/: basic.world  empty.world  iris_opt_flow.world  typhoon_h480.world  warehouse.world
rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
(+17 files in other folders)
