<package format="2">
  <name>drone_rl</name>
  <version>0.1.0</version>
  <description>ROS-based reinforcement learning for UAV control</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>

  <depend>nav_msgs</depend>
  <export>
      <build_type>catkin</build_type>
  </export>

</package>
