<?xml version="1.0"?>
<package format="2">
  <name>quadrotor_rl_controller</name>
  <version>0.0.0</version>
  <description>The quadrotor_rl_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hello@todo.todo">hello</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- 依赖项 -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_tools</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>quadrotor_msgs</depend>

  <!-- Python 相关依赖 -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-gym</exec_depend>
  <exec_depend>python3-stable_baselines3</exec_depend>

  <!-- Gazebo 相关 -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_srvs</depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
